fixed collapsing

--- a/src/App.css
+++ b/src/App.css
@@ -273,8 +273,6 @@ background:linear-gradient(
   flex:1;
   min-width: 350px;
   max-width: 900px;
-  width:100%;
-  padding-right: 40px;
 }
 .chart-box{
 display:flex;
@@ -295,6 +293,7 @@ height:350px;
   flex:1;
     max-width:850px;
   overflow: hidden; 
+  box-sizing:border-box;
     border-radius:24px;
     padding:30px;
  background:rgba(17,24,39,0.85);
